# NBAnalyzer

./: .gitignore  README.md
api/: .env.example  .gitignore  DEPLOYMENT.md  INTEGRATION.md  LAUNCHD.md  OPS.md  POLISH_FIXES.md  README.md  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: f8fe877502a7_initial_migration_create_all_tables.py
api/data/: margin_training_data.csv
api/scripts/: __init__.py  add_game_time_column.py  backfill_scores.py  backfill_season_results.py  build_training_dataset.py  check_game_score.py  cron_game_results.txt  crontab_entries.txt  fetch_odds.py  fetch_odds_cron.sh  fetch_todays_games.py  fetch_upcoming_games.py  fetch_upcoming_games_cron.sh  fetch_week_games.py  ingest_games.py  ingest_player_stats.py  ingest_players.py  ingest_teams.py  pick_bets.py  predict_margins.py  run_ops.py  seed_database.py  seed_production.py  test_bet_selector.py  test_ml_integration.py  train_margin_model.py  update_game_results_cron.sh
api/src/nb_analyzer/: __init__.py  config.py  database.py  main.py
api/src/nb_analyzer/ml/: BET_SELECTION_REFINEMENTS.md  BET_SELECTOR.md  CONFIDENCE_TIERS.md  README.md  TRAINING.md  __init__.py  bet_selector.py  dataset_builder.py  margin_inference.py
api/src/nb_analyzer/models/: __init__.py  game.py  odds.py  player.py  player_game_stats.py  team.py
api/src/nb_analyzer/routers/: __init__.py  games.py  teams.py
api/src/nb_analyzer/services/: __init__.py  ml_recommendation_service.py  recommendations.py  (+2 more)
api/src/nba_predictor/: config.py  database.py  main.py
(+22 files in other folders)
